configure maven to use java 13