@@ -40,8 +40,8 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -56,6 +56,7 @@
                     </excludes>
                     <includes>
                     </includes>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
 
@@ -66,6 +67,7 @@
                 <configuration>
                     <source>13</source>
                     <target>13</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
